# nioc

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  systemDependencies.json
cmake/: addTargets.cmake  (+6 more)
modules/chronicle/: CMakeLists.txt  design.md
modules/chronicle/include/nioc/chronicle/: channel.hpp  channelReader.hpp  channelWriter.hpp  chronicle.hpp  crate.hpp  defines.hpp  memoryCrate.hpp  reader.hpp  reservation.hpp  writer.hpp
modules/chronicle/src/: channel.cpp  channel.hpp  channelReader.cpp  channelReader.hpp  chronicle.cpp  crate.cpp  defines.cpp  logReaderImpl.cpp  logReaderImpl.hpp  loggerImpl.cpp  loggerImpl.hpp  memoryCrate.cpp  memoryCrateImpl.cpp  memoryCrateImpl.hpp  mmapChannelReader.cpp  mmapChannelReader.hpp  mmapMemoryCrate.cpp  mmapMemoryCrate.hpp  mmapReader.cpp  mmapReader.hpp  reader.cpp  reservation.cpp  streamChannelWriter.cpp  streamChannelWriter.hpp  streamWriter.cpp  streamWriter.hpp  utils.cpp  utils.hpp  writer.cpp
modules/chronicle/test/: CMakeLists.txt  boostMMapExampleTest.cpp  channelReaderTest.cpp  channelTest.cpp  crateTest.cpp  definesTest.cpp  logReaderTest.cpp  loggerTest.cpp  mmapChannelReaderTest.cpp  readerTest.cpp  reservationTest.cpp  streamChannelWriterTest.cpp  utilsTest.cpp  writerTest.cpp
modules/common/: CMakeLists.txt
modules/common/include/naksh/common/: cacheManager.hpp  locked.hpp  typeTraits.hpp  typetraits.hpp
modules/common/include/nioc/common/: annotators.hpp  cacheManager.hpp  exception.hpp  filesystem.hpp  locked.hpp  makeBimap.hpp  propagateConst.hpp  raiiToken.hpp  signalCatcher.hpp  sleep.hpp  time.hpp  typeTraits.hpp  utils.hpp
modules/common/src/: common.cpp  signalCatcher.cpp  utils.cpp
modules/common/test/: CMakeLists.txt  cacheManagerTest.cpp  exceptionTest.cpp  filesystemTest.cpp  lockTest.cpp  makeBimapTest.cpp  raiiTokenTest.cpp  signalCatcherTest.cpp  timeTest.cpp  typeTraitsTest.cpp  typetraitsTest.cpp  utilsTest.cpp
modules/concurrent/: CMakeLists.txt
modules/concurrent/include/nioc/concurrent/: anyMpsc.hpp  asyncProcessor.hpp  droppingMpsc.hpp  mpscQueue.hpp  notifyingInbox.hpp  overwritingMpsc.hpp  routine.hpp  runner.hpp  threadedRunner.hpp  unboundedMpsc.hpp
modules/concurrent/src/: routine.cpp  runner.cpp  threadedRunner.cpp
modules/concurrent/test/: CMakeLists.txt  anyMpscTest.cpp  asyncProcessorTest.cpp  notifyingInboxTest.cpp  overwritingMpscTest.cpp  runnerTest.cpp  unboundedMpscTest.cpp
modules/containers/: CMakeLists.txt
modules/containers/include/nioc/containers/: mmapArray.hpp  mmapConstArray.hpp  mmapRegion.hpp  tape.hpp
modules/containers/src/: mmapRegion.cpp
modules/containers/test/: CMakeLists.txt  mmapArrayTest.cpp  mmapConstArrayTest.cpp  mmapRegionTest.cpp  tapeTest.cpp
modules/example/: CMakeLists.txt  README.md
modules/example/config/nioc/example/: defaultCatan.json  defaultExample.json  strippedCatan.json
modules/example/include/naksh/example/: example.hpp
modules/example/include/nioc/example/: cityBuilder.hpp  developmentCardBuilder.hpp  example.hpp  exampleComponent1.hpp  exampleComponent2.hpp  exampleDriver.hpp  fields.hpp  forest.hpp  hills.hpp  messageCounter.hpp  mountains.hpp  pasture.hpp  roadBuilder.hpp  settlementBuilder.hpp
modules/example/src/: catanMain.cpp  cityBuilder.cpp  developmentCardBuilder.cpp  example.cpp  exampleComponent1.cpp  exampleComponent2.cpp  exampleDriver.cpp  exampleMain.cpp  examplePrivateHeader.hpp  messageCounter.cpp  roadBuilder.cpp  settlementBuilder.cpp
modules/example/test/: CMakeLists.txt  exampleTest.cpp
modules/geometry/: CMakeLists.txt
modules/geometry/include/naksh/geometry/: compose.hpp  constants.hpp  frame.hpp  frameConcepts.hpp  frameId.hpp  frameReferences.hpp  pose.hpp  rigidTransform.hpp  rotation.hpp  traits.hpp  transform.hpp  transformBase.hpp
modules/geometry/include/nioc/geometry/: constants.hpp  frame.hpp  frameConcepts.hpp  frameReferences.hpp  pose.hpp  rigidTransform.hpp  rotation.hpp  traits.hpp
modules/geometry/src/: compose.cpp  frame.cpp  frameId.cpp  frameReferences.cpp
modules/geometry/test/: CMakeLists.txt  composeTest.cpp  frameConceptsTest.cpp  frameIdTest.cpp  frameReferencesTest.cpp  frameTest.cpp  poseTest.cpp  rigidTransformTest.cpp  rotationTest.cpp  transformBaseTest.cpp  transformTest.cpp
modules/logger/: CMakeLists.txt  design.md
modules/logger/include/naksh/logger/: channel.hpp  channelReader.hpp  defines.hpp  logReader.hpp  logger.hpp  memoryCrate.hpp
modules/logger/include/nioc/logger/: defines.hpp  logReader.hpp  logger.hpp  memoryCrate.hpp
modules/logger/src/: channel.cpp  channel.hpp  channelReader.cpp  channelReader.hpp  channelReaderImpl.cpp  channelReaderImpl.hpp  logReader.cpp  logReaderImpl.cpp  logReaderImpl.hpp  logger.cpp  loggerImpl.cpp  loggerImpl.hpp  memoryCrate.cpp  memoryCrateImpl.cpp  memoryCrateImpl.hpp  utils.cpp  utils.hpp
modules/logger/test/: CMakeLists.txt  boostMMapExampleTest.cpp  boostMMapWriteTest.cpp  channelReaderTest.cpp  channelTest.cpp  logReaderTest.cpp  loggerTest.cpp  utilsTest.cpp
modules/messages/: CMakeLists.txt
modules/messages/src/: messageBase.cpp  msgBase.cpp
modules/messages/test/: CMakeLists.txt  messagesTest.cpp
modules/primitives/: CMakeLists.txt
modules/sensors/: CMakeLists.txt
modules/terminus/: CMakeLists.txt  design.md
modules/terminus/src/: arenaMessageBuilder.cpp  asyncChronicleWriter.cpp  component.cpp  configStore.cpp  consignment.cpp  defaultSignalCatcher.cpp  draft.cpp  driver.cpp  logPlayer.cpp  manifest.cpp  msgBase.cpp  port.cpp  programOption.cpp  runContext.cpp  runner.cpp  threadedRunner.cpp  utils.cpp
modules/terminus/test/: CMakeLists.txt  componentTest.cpp  configStoreTest.cpp  consignmentTest.cpp  driverTest.cpp  logPlayerTest.cpp  manifestTest.cpp  messageTest.cpp  msgTest.cpp  portTest.cpp  runnerTest.cpp  schemaIdTest.cpp  terminusTest.cpp  testComponent.cpp  testComponent.hpp  utilsTest.cpp
modules/terminus/test/data/: malformedConfig.json  testConfig.json  testConfigOverride.json
(+101 files in other folders)
